--- a/packages/bootstrap/package.json
+++ b/packages/bootstrap/package.json
@@ -45,7 +45,7 @@
     "dart:watch": "gulp dart:watch",
     "dart:swatches": "gulp dart:swatches",
     "dart:flat": "gulp dart:flat",
-    "prepublishOnly": "echo 'no prebublish for bootstrap theme'",
+    "prepublishOnly": "node ../../scripts/themes-prepublish.js",
     "postpublish": "echo 'no postpublish for bootstrap theme'"
   },
   "dependencies": {
