--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "stylelint-scss": "^4.1.0"
   },
   "scripts": {
-    "init": "npm install && ls -d $PWD/packages/* | xargs -L 1 bash -c 'cd \"$0\" && npm link' && npm run bootstrap",
+    "setup": "bash ./scripts/setup.sh",
     "clean": "find . -name \"node_modules\" -type d -prune | grep -e \".git\" -v | xargs rm -rf",
     "clean:dist": "find ./packages -name \"dist\" -type d -prune | grep -e \"node_modules\" -v | xargs rm -rf",
     "clean:tests": "node ./scripts/cleanup-test-results.js",
