--- a/packages/html/package.json
+++ b/packages/html/package.json
@@ -10,7 +10,7 @@
     "HTML",
     "Helpers"
   ],
-  "main": "index.js",
+  "main": "dist/index.js",
   "files": [
     "dist/",
     "src/",
@@ -30,16 +30,11 @@
     "access": "public"
   },
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -cw"
+    "build": "node ./scripts/build.js",
+    "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@babel/preset-env": "^7.16.7",
-    "@babel/preset-react": "^7.16.7",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^22.0.0",
-    "@rollup/plugin-node-resolve": "^13.1.2",
-    "rollup": "^2.62.0"
+    "esbuild": "^0.14.36",
+    "glob": "^8.0.3"
   }
 }
