--- a/.github/workflows/ci_visual.yml
+++ b/.github/workflows/ci_visual.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        theme: [default, bootstrap, material, classic, nouvelle]
+        theme: [default, bootstrap, material, classic, nouvelle, fluent]
 
     steps:
       - name: Checkout branch
