chore: use sass-embedded for dart build

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@commitlint/core": "^17.0.0",
     "@progress/kendo-e2e": "^0.10.1",
     "@progress/kendo-font-icons": "0.1.2",
-    "@progress/kendo-theme-tasks": "^1.15.1",
+    "@progress/kendo-theme-tasks": "^1.15.2",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "autoprefixer": "^10.4.7",
@@ -27,6 +27,7 @@
     "postcss": "^8.4.14",
     "postcss-calc": "^8.2.4",
     "sass": "^1.52.2",
+    "sass-embedded": "^1.52.2",
     "sass-lint": "^1.13.1",
     "sassdoc": "^2.7.4",
     "semver": "^7.3.7",
