chore: update sass-build to allow tilde imports for dart sass

--- a/packages/bootstrap/package.json
+++ b/packages/bootstrap/package.json
@@ -45,5 +45,8 @@
   "dependencies": {
     "@progress/kendo-theme-default": "^5.5.0",
     "bootstrap": "^5.1.0"
+  },
+  "devDependencies": {
+    "sass-build": "^0.0.1"
   }
 }
