--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -34,5 +34,8 @@
     "sass": "sass-build",
     "prepublishOnly": "node ../../scripts/themes-prepublish.js",
     "postpublish": "echo 'no postpublish for utils'"
+  },
+  "devDependencies": {
+    "sass-build": "^0.0.1"
   }
 }
