--- a/.github/workflows/ci_visual.yml
+++ b/.github/workflows/ci_visual.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           npm run build:scripts
           npm run build:tests
-          npm run sass
+          npm run sass --prefix packages/${{ matrix.theme }}
 
       - name: Update markup snapshots
         env:
