--- a/packages/classic/package.json
+++ b/packages/classic/package.json
@@ -44,5 +44,8 @@
   },
   "dependencies": {
     "@progress/kendo-theme-default": "^5.5.0"
+  },
+  "devDependencies": {
+    "sass-build": "^0.0.1"
   }
 }
