--- a/packages/nouvelle/package.json
+++ b/packages/nouvelle/package.json
@@ -44,6 +44,10 @@
     "postpublish": "echo 'no postpublish for nouvelle theme'"
   },
   "dependencies": {
-    "@progress/kendo-theme-default": "^5.5.0"
+    "@progress/kendo-font-icons": "^0.1.2",
+    "@progress/kendo-theme-utils": "^5.5.0"
+  },
+  "devDependencies": {
+    "sass-build": "^0.0.1"
   }
 }
