--- a/.github/workflows/release_stable.yml
+++ b/.github/workflows/release_stable.yml
@@ -48,6 +48,7 @@ jobs:
 
       - name: Build themes for dist
         run: |
+          npm run sass
           npm run sass:flat
           npm run dist:swatches
 
