ci: copy all.css to dist for fluent theme

--- a/.github/workflows/release_dev.yml
+++ b/.github/workflows/release_dev.yml
@@ -47,6 +47,7 @@ jobs:
 
       - name: Build themes for dist
         run: |
+          npm run sass
           npm run sass:flat
           npm run dist:swatches
 
