fix: point to correct location of all.css in dist

--- a/packages/fluent/package.json
+++ b/packages/fluent/package.json
@@ -10,7 +10,7 @@
     "Fluent",
     "CSS Variables"
   ],
-  "main": "dist/index.css",
+  "main": "dist/all.css",
   "sass": "scss/index.scss",
   "files": [
     "dist/",
