--- a/.github/workflows/ci_visual.yml
+++ b/.github/workflows/ci_visual.yml
@@ -12,13 +12,10 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  run-tests:
-    name: Run tests
-    runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        theme: [default, bootstrap, material, classic, nouvelle, fluent]
+  prepare-artifacts:
+    name: Prepare artifacts
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout branch
@@ -42,7 +39,7 @@ jobs:
         run: |
           npm run build:scripts
           npm run build:tests
-          npm run sass --prefix packages/${{ matrix.theme }}
+          npm run sass
 
       - name: Update markup snapshots
         env:
@@ -50,16 +47,55 @@ jobs:
         run: |
           ./build/create-snapshots.mjs
 
+      - name: Pack themes
+        run: |
+          tar -cf themes.tar \
+            packages/default/dist/all.css \
+            packages/bootstrap/dist/all.css \
+            packages/classic/dist/all.css \
+            packages/fluent/dist/all.css \
+            packages/material/dist/all.css \
+            packages/nouvelle/dist/all.css \
+            packages/utils/dist/all.css
+
       - name: Pack snapshots
-        if: ${{ matrix.theme == 'default' }}
         run: tar --exclude tests/_output -cf snapshots.tar tests
+
+      - name: Upload themes
+        uses: actions/upload-artifact@v2
+        with:
+          name: themes
+          path: themes.tar
 
       - name: Upload snapshots
         uses: actions/upload-artifact@v2
-        if: ${{ matrix.theme == 'default' }}
         with:
           name: snapshots
           path: snapshots.tar
+
+  run-tests:
+    name: Run tests
+    runs-on: ubuntu-latest
+    needs: prepare-artifacts
+
+    strategy:
+      matrix:
+        theme: [default, bootstrap, material, classic, nouvelle, fluent]
+
+    steps:
+      - name: Checkout branch
+        uses: actions/checkout@v2
+
+      - name: Print Firefox version
+        run: firefox --version
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
+        with:
+          path: .tmp
+
+      - name: Unpack artifacts
+        run: find .tmp -name "*.tar" -type f -exec tar -xf {} \;
 
       - name: Create screenshots
         run: ./build/create-screenshots.sh ${{ matrix.theme }}
