--- a/.github/workflows/ci_visual.yml
+++ b/.github/workflows/ci_visual.yml
@@ -13,70 +13,18 @@ concurrency:
 
 jobs:
 
-  prepare-artifacts:
-    name: Prepare artifacts
-    runs-on: ubuntu-latest
+  compile-themes:
+    name: Compile themes
+    uses: ./.github/workflows/compile_themes.yml
 
-    steps:
-      - name: Checkout branch
-        uses: actions/checkout@v2
-
-      - name: Print Firefox version
-        run: firefox --version
-
-      - name: Setup node
-        uses: actions/setup-node@v2
-        with:
-          cache: 'npm'
-          node-version: 14.x
-
-      - name: Install
-        run: |
-          npm ci
-          npm run bootstrap
-
-      - name: Build test assets
-        run: |
-          npm run build:scripts
-          npm run build:tests
-          npm run sass
-
-      - name: Update markup snapshots
-        env:
-          HEADLESS: 'true'
-        run: |
-          ./build/create-snapshots.mjs
-
-      - name: Pack themes
-        run: |
-          tar -cf themes.tar \
-            packages/default/dist/all.css \
-            packages/bootstrap/dist/all.css \
-            packages/classic/dist/all.css \
-            packages/fluent/dist/all.css \
-            packages/material/dist/all.css \
-            packages/nouvelle/dist/all.css \
-            packages/utils/dist/all.css
-
-      - name: Pack snapshots
-        run: tar --exclude tests/_output -cf snapshots.tar tests
-
-      - name: Upload themes
-        uses: actions/upload-artifact@v2
-        with:
-          name: themes
-          path: themes.tar
-
-      - name: Upload snapshots
-        uses: actions/upload-artifact@v2
-        with:
-          name: snapshots
-          path: snapshots.tar
+  create-snapshots:
+    name: Create snapshots
+    uses: ./.github/workflows/create_snapshots.yml
 
   run-tests:
     name: Run tests
     runs-on: ubuntu-latest
-    needs: prepare-artifacts
+    needs: [ compile-themes, create-snapshots ]
 
     strategy:
       matrix:
