--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "build:tests": "npm run build:tests --prefix packages/html",
     "watch:tests": "npm run watch:tests --prefix packages/html",
     "serve": "npm run sass && npm run build:scripts && npm run build:tests && npm run serve-tests",
-    "eslint": "eslint \"**/*.{js,jsx,ts,tsx}\"",
+    "eslint": "eslint \"**/*.{js,jsx,ts,tsx,mjs}\"",
     "check-types": "npm run check-types --prefix packages/html",
     "sasslint": "sass-lint -v -q ",
     "stylelint": "stylelint \"**/*.scss\"",
@@ -69,7 +69,7 @@
     "update": "npx npm-check-updates --upgrade"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "eslint"
+    "*.{js,jsx,ts,tsx,mjs}": "eslint"
   },
   "husky": {
     "hooks": {
