--- a/packages/classic/package.json
+++ b/packages/classic/package.json
@@ -43,6 +43,7 @@
     "postpublish": "echo 'no postpublish for classic theme'"
   },
   "dependencies": {
+    "@progress/kendo-theme-core": "^5.8.2-dev.4",
     "@progress/kendo-theme-default": "^5.8.2-dev.4"
   },
   "devDependencies": {
