--- a/packages/material/package.json
+++ b/packages/material/package.json
@@ -44,6 +44,7 @@
     "postpublish": "echo 'no postpublish for material theme'"
   },
   "dependencies": {
+    "@progress/kendo-theme-core": "^5.8.2-dev.4",
     "@progress/kendo-theme-default": "^5.8.2-dev.4"
   },
   "devDependencies": {
