--- a/packages/nouvelle/package.json
+++ b/packages/nouvelle/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@progress/kendo-font-icons": "^0.4.0",
+    "@progress/kendo-theme-core": "^5.8.2-dev.4",
     "@progress/kendo-theme-utils": "^5.8.2-dev.4"
   },
   "devDependencies": {
