--- a/packages/html/tsconfig.json
+++ b/packages/html/tsconfig.json
@@ -1,5 +1,7 @@
 {
     "compilerOptions": {
+        "target": "es6",
+        "moduleResolution": "node",
         "jsx": "react",
         "isolatedModules": true,
         "esModuleInterop": true,
