--- a/packages/classic/package.json
+++ b/packages/classic/package.json
@@ -39,6 +39,8 @@
   "scripts": {
     "build": "sass-build",
     "sass": "sass-build",
+    "nuget-pack": "jq '.version' package.json | xargs nuget pack package.nuspec -Version",
+    "nuget-push": "nuget push *.nupkg -Source \"github\"",
     "prepublishOnly": "node ../../scripts/themes-prepublish.js",
     "postpublish": "echo 'no postpublish for classic theme'"
   },
