--- a/packages/material/package.json
+++ b/packages/material/package.json
@@ -40,6 +40,8 @@
   "scripts": {
     "build": "sass-build",
     "sass": "sass-build",
+    "nuget-pack": "jq '.version' package.json | xargs nuget pack package.nuspec -Version",
+    "nuget-push": "nuget push *.nupkg -Source \"github\"",
     "prepublishOnly": "node ../../scripts/themes-prepublish.js",
     "postpublish": "echo 'no postpublish for material theme'"
   },
