--- a/packages/material/package.json
+++ b/packages/material/package.json
@@ -41,7 +41,7 @@
     "build": "sass-build",
     "sass": "sass-build",
     "nuget-pack": "jq '.version' package.json | xargs nuget pack package.nuspec -Version",
-    "nuget-push": "nuget push *.nupkg -Source \"github\"",
+    "nuget-push": "nuget push *.nupkg -ApiKey $NUGET_API_KEY -Source $NUGET_FEED -SkipDuplicate",
     "prepublishOnly": "node ../../scripts/themes-prepublish.js",
     "postpublish": "echo 'no postpublish for material theme'"
   },
