chore: update dependencies

--- a/packages/default/package.json
+++ b/packages/default/package.json
@@ -43,7 +43,12 @@
     "prepublishOnly": "node ../../scripts/themes-prepublish.js",
     "postpublish": "echo 'no postpublish for default theme'"
   },
+  "dependencies": {
+    "@progress/kendo-font-icons": "^0.6.0",
+    "@progress/kendo-theme-core": "^5.10.1-dev.1",
+    "@progress/kendo-theme-utils": "^5.10.1-dev.1"
+  },
   "devDependencies": {
-    "sass-build": "^1.0.0"
+    "sass-build": "^1.1.0"
   }
 }
