chore: include swatches in nuget dist

--- a/.github/workflows/nuget_publish.yml
+++ b/.github/workflows/nuget_publish.yml
@@ -45,8 +45,7 @@ jobs:
       - name: Build themes for dist
         run: |
           npm run sass
-          npm run sass:flat
-          npm run dist:swatches
+          npm run sass:swatches
 
       - name: Pack nuget
         run: |
