fix(html-spec): pack schemas for release

--- a/packages/html-spec/package.json
+++ b/packages/html-spec/package.json
@@ -13,6 +13,7 @@
   "main": "src/index.js",
   "files": [
     "dist/**/*.json",
+    "schemas/*.json",
     "src/**/*.js",
     "src/**/*.json"
   ],
