ci(github): explicitly download firefox in actions

--- a/.github/workflows/ci_visual.yml
+++ b/.github/workflows/ci_visual.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v3
 
-      - name: Print Firefox version
-        run: firefox --version
+      - name: Setup Firefox
+        uses: browser-actions/setup-firefox@latest
 
       - name: Download artifacts
         uses: actions/download-artifact@v3
