ci: add pastshots as a dependency

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "chai": "^4.3.6",
+    "chromedriver": "^107.0.3",
     "dss": "^1.0.4",
     "eslint": "^8.17.0",
     "eslint-plugin-react": "^7.30.0",
     "fs-extra": "^10.1.0",
+    "geckodriver": "^3.2.0",
     "glob": "^8.0.3",
     "gulp": "^4.0.2",
     "html-validate": "^7.1.1",
@@ -25,6 +27,7 @@
     "lint-staged": "^13.0.3",
     "node-sass": "^7.0.1",
     "nunjucks": "^3.2.3",
+    "pastshots": "^1.6.1",
     "sass": "^1.54.9",
     "sass-build": "^1.1.0",
     "sass-embedded": "^1.54.9",
