--- a/.github/workflows/nuget_publish.yml
+++ b/.github/workflows/nuget_publish.yml
@@ -38,9 +38,10 @@ jobs:
         uses: nuget/setup-nuget@v1
 
       - name: Install
-        run: |
-          npm ci
-          npm run bootstrap
+        run: npm ci --no-audit --no-fund
+
+      - name: Bootstrap
+        run: npm run bootstrap
 
       - name: Build themes for dist
         run: |
