--- a/.github/workflows/ci_next.yml
+++ b/.github/workflows/ci_next.yml
@@ -34,9 +34,10 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install
-        run: |
-          npm ci
-          npm run bootstrap
+        run: npm ci --no-audit --no-fund
+
+      - name: Bootstrap
+        run: npm run bootstrap
 
       - name: Lint scripts
         run: npm run eslint
