--- a/.github/workflows/publish_swatches.yml
+++ b/.github/workflows/publish_swatches.yml
@@ -34,9 +34,10 @@ jobs:
           node-version: 14.x
 
       - name: Install
-        run: |
-          npm ci
-          npm run bootstrap
+        run: npm ci --no-audit --no-fund
+
+      - name: Bootstrap
+        run: npm run bootstrap
 
       - name: Build swatches
         run: npm run sass:swatches
