--- a/.github/workflows/ci_visual.yml
+++ b/.github/workflows/ci_visual.yml
@@ -23,7 +23,7 @@ jobs:
 
   run-tests:
     name: Run tests
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: [ compile-themes, create-snapshots ]
 
     strategy:
@@ -33,9 +33,6 @@ jobs:
     steps:
       - name: Checkout branch
         uses: actions/checkout@v3
-
-      - name: Setup Firefox
-        uses: browser-actions/setup-firefox@latest
 
       - name: Setup node
         uses: actions/setup-node@v3
