--- a/.github/workflows/ci_unit.yml
+++ b/.github/workflows/ci_unit.yml
@@ -6,8 +6,10 @@ defaults:
 
 on:
   push:
-    branches:
-      - '**'
+    branches-ignore:
+      - 'master'
+      - 'develop'
+      - 'v4-dev'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -26,12 +28,20 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup node
+        id: setup-node
         uses: actions/setup-node@v3
         with:
-          cache: 'npm'
           node-version: 14.x
 
+      - name: Use cache for root node_modules
+        id: cache-root-node_modules
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: root-node_modules-${{ steps.setup-node.outputs.node-version }}-${{ hashFiles('package-lock.json') }}
+
       - name: Install
+        if: steps.cache-root-node_modules.outputs.cache-hit != 'true'
         run: npm ci --no-audit --no-fund
 
       - name: Bootstrap
