--- a/.github/workflows/release_stable.yml
+++ b/.github/workflows/release_stable.yml
@@ -33,15 +33,23 @@ jobs:
           git merge --ff-only --quiet origin/develop
 
       - name: Setup node
+        id: setup-node
         uses: actions/setup-node@v3
         with:
-          cache: 'npm'
           node-version: 14.x
           registry-url: 'https://registry.npmjs.org'
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
+      - name: Use cache for root node_modules
+        id: cache-root-node_modules
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: root-node_modules-${{ steps.setup-node.outputs.node-version }}-${{ hashFiles('package-lock.json') }}
+
       - name: Install
+        if: steps.cache-root-node_modules.outputs.cache-hit != 'true'
         run: npm ci --no-audit --no-fund
 
       - name: Bootstrap
