--- a/.github/workflows/tag_stable.yml
+++ b/.github/workflows/tag_stable.yml
@@ -20,9 +20,9 @@ jobs:
           ref: master
 
       - name: Setup node
+        id: setup-node
         uses: actions/setup-node@v3
         with:
-          cache: 'npm'
           node-version: 14.x
           registry-url: 'https://registry.npmjs.org'
         env:
