chore: re-enable CI on dev branch

--- a/.github/workflows/ci_unit.yml
+++ b/.github/workflows/ci_unit.yml
@@ -6,10 +6,8 @@ defaults:
 
 on:
   push:
-    branches-ignore:
-      - 'master'
-      - 'develop'
-      - 'v4-dev'
+    branches:
+      - '**'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
