--- a/.github/workflows/publish_swatches.yml
+++ b/.github/workflows/publish_swatches.yml
@@ -12,7 +12,7 @@ on:
         default: 'master'
 
   workflow_run:
-    workflows: [ "Release stable channel" ]
+    workflows: [ "Publish to npm" ]
     types: [ completed ]
 
 jobs:
