--- a/.github/workflows/publish_npm_dev.yml
+++ b/.github/workflows/publish_npm_dev.yml
@@ -1,4 +1,4 @@
-name: Release vNext channel
+name: Publish to npm (dev)
 
 defaults:
   run:
@@ -7,14 +7,14 @@ defaults:
 on:
   workflow_dispatch:
   workflow_run:
-    workflows: ["CI | Next"]
-    branches: [v5-dev]
+    workflows: ["CI | Weekly"]
+    branches: [develop]
     types:
       - completed
 
 jobs:
 
-  release-next:
+  release-dev:
 
     runs-on: ubuntu-latest
 
@@ -23,7 +23,7 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v3
         with:
-          ref: v5-dev
+          ref: develop
           token: ${{ secrets.GH_TOKEN }}
 
       - name: Setup git
@@ -56,14 +56,15 @@ jobs:
 
       - name: Build themes for dist
         run: |
+          npm run sass
           npm run sass:flat
           npm run dist:swatches
 
       - name: Determine correct version to publish
         run: |
-          NEXT_VERSION=$(npm info @progress/kendo-theme-default@next version)
+          DEV_VERSION=$(npm info @progress/kendo-theme-default@dev version)
           LATEST_VERSION=$(npm info @progress/kendo-theme-default@latest version)
-          VERSION=$(node ./scripts/semver-next-inc.js --next $NEXT_VERSION --latest $LATEST_VERSION)
+          VERSION=$(node ./scripts/semver-dev-inc.js --dev $DEV_VERSION --latest $LATEST_VERSION)
           echo "Lerna should publish using $VERSION"
           echo "VERSION=$VERSION" >> $GITHUB_ENV
 
@@ -75,8 +76,20 @@ jobs:
 
       - name: Lerna publish
         run: |
-          npx lerna publish from-package --dist-tag next
+          npx lerna publish from-package --dist-tag dev
 
-      - name: Push to GitHub
+      - name: Push release commit
         run: |
-          git push origin v5-dev --quiet > /dev/null 2>&1
+          git push origin develop:tmp-release-dev
+
+      - name: Mark checks as successful
+        run: |
+          commit=$(git rev-parse HEAD)
+          ./build/mark-checks.sh $commit
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+
+      - name: Push release commit to develop
+        run: |
+          git push origin develop
+          git push --delete origin tmp-release-dev
