--- a/package.json
+++ b/package.json
@@ -6,17 +6,16 @@
     "@commitlint/cli": "^17.0.2",
     "@commitlint/config-conventional": "^17.0.2",
     "@commitlint/core": "^17.0.0",
+    "@progress/dss": "^1.0.1",
     "@progress/kendo-e2e": "^1.0.0",
-    "@progress/kendo-font-icons": "0.6.0",
     "@progress/kendo-theme-tasks": "^1.17.3",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "chai": "^4.3.6",
     "chromedriver": "^107.0.3",
-    "dss": "^1.0.4",
+    "esbuild": "^0.15.0",
     "eslint": "^8.17.0",
     "eslint-plugin-react": "^7.30.0",
-    "fs-extra": "^10.1.0",
     "geckodriver": "^3.2.0",
     "glob": "^8.0.3",
     "gulp": "^4.0.2",
@@ -36,7 +35,8 @@
     "semver": "^7.3.7",
     "stylelint": "^14.8.5",
     "stylelint-config-standard": "^28.0.0",
-    "stylelint-scss": "^4.2.0"
+    "stylelint-scss": "^4.2.0",
+    "typescript": "^4.7.2"
   },
   "scripts": {
     "setup": "bash ./scripts/setup.sh",
