--- a/packages/classic/package.json
+++ b/packages/classic/package.json
@@ -46,11 +46,9 @@
   },
   "dependencies": {
     "@progress/kendo-font-icons": "^0.6.0",
-    "@progress/kendo-theme-core": "^5.12.0",
-    "@progress/kendo-theme-default": "^5.12.0",
-    "@progress/kendo-theme-utils": "^5.12.0"
+    "@progress/kendo-theme-core": "5.12.0",
+    "@progress/kendo-theme-default": "5.12.0",
+    "@progress/kendo-theme-utils": "5.12.0"
   },
-  "devDependencies": {
-    "sass-build": "^1.1.0"
-  }
+  "devDependencies": {}
 }
