--- a/packages/html/package.json
+++ b/packages/html/package.json
@@ -41,9 +41,6 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.2",
-    "esbuild": "^0.15.0",
-    "glob": "^8.0.3",
-    "typescript": "^4.7.2"
+    "@types/react": "^18.0.2"
   }
 }
